package Pagamento;

public interface IPagamento {
    void pagar(int valor);
}
